feat: add model test
